# ish

./: .beans.yml  .gitignore  .ish.yml  .mise.toml  AGENTS.md  Cargo.toml  PROGRESS.md  RALPH.md  README.md  build.rs  codebook.toml  progress.md
.beads/: metadata.json
.beans/: ish-0iv6--initialize-cargo-project-and-module-structure.md  ish-0vs9--break-mainrs-refactor-proposal-into-beans.md  ish-1of2--output-display.md  ish-2iuf--etag-computation.md  ish-3o4l--cli-check-command.md  ish-4b45--cli-prime-command.md  ish-4qx4--data-model-ishoo.md  ish-5cna--implicit-blocking-and-implicit-status.md  ish-614c--config-struct-and-ishyml-parsing.md  ish-6bsa--plan-second-stage-module-splits-for-roadmap-output.md  ish-6cqj--core-engine-storage.md  ish-6ye6--cli-create-command.md  ish-6z0n--cli-delete-command.md  ish-7rz2--cli-archive-command.md  ish-adhz--slim-mainrs-and-redistribute-tests-after-extractio.md  ish-b8m7--config-discovery-walk-directory-tree.md  ish-ba6i--fractional-indexing-for-manual-ordering.md  ish-bpxr--markdown-body-rendering-for-show-command.md  ish-dpfq--id-generation-and-filename-handling.md  ish-ffou--core-store-load-from-disk-and-in-memory-state.md  ish-fkhv--tag-validation-and-body-helpers.md  ish-gqts--ishoo-struct-and-yaml-frontmatter-parsing.md  ish-gt2k--cli-commands.md  ish-h9yk--cycle-detection-and-link-checking.md  ish-hb0h--cli-version-command.md  ish-hqty--refactor-cliapp-module-layout-and-shrink-mainrs.md  ish-i6i7--core-store-archive-and-unarchive.md  ish-idzc--relationships-link-integrity.md  ish-k60j--tree-view-for-list-command.md  (+18 more)
(+197 files in other folders)
