[package]
name = "ish"
version = "0.1.0"
edition = "2024"
description = "A terminal-based issue tracker"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3"
crossterm = "0.29"
fnv = "1"
nanoid = "0.4"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
terminal_size = "0.4"
termimad = "0.30"
